# rical

./: .gitignore  LICENSE  README.md
backend/: .env.example  Cargo.toml  Dockerfile  build.rs
backend/src/: config.rs  main.rs  routes.rs  setup_schemas.rs  types.rs  utils.rs
backend/src/routes/: account.rs  calendar.rs  task.rs  user.rs
rical_frontend/: Cargo.toml
rical_frontend/src/: constants.rs  main.rs  state.rs  styles.rs  types.rs  utils.rs
rical_frontend/src/api/: mod.rs
rical_frontend/src/components/: calendar.rs  edit_task_form.rs  form.rs  inputtext.rs  login.rs  menu.rs  mod.rs  new_task_form.rs  root.rs  signup.rs  text.rs
rical_terminal/: .env.example  Cargo.toml
rical_terminal/src/: main.rs  state.rs  styles.rs  types.rs  utils.rs
rical_terminal/src/api/: mod.rs
rical_terminal/src/components/: calendar.rs  edit_task_form.rs  form.rs  inputtext.rs  login.rs  menu.rs  mod.rs  new_task_form.rs  root.rs  signup.rs  text.rs
rical_web/: index.html  package-lock.json  package.json
rical_web/src/: App.css  App.tsx  index.css
