[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
axum = "0.8.4"
dotenvy = "0.15.7"
hmac = "0.12.1"
jwt = "0.16.0"
serde = { version = "1.0.219", features = ["derive"] }
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
